-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 9
-
Component/s: hotspot
P1 because it is regression - lost functionality.
Running with -XX:+UnlockDiagnosticVMOptions -XX:+LogCompilation -Xbatch shows only head and tail of <task> in hotspot log file (see attached):
<task compile_id='1' method='mathtest test (DI)D' bytes='26' count='2' backedge_count='5000' iicount='2' blocking='1' stamp='0.232'>
<task_done success='1' nmsize='824' count='2' backedge_count='5000' inlined_bytes='5' stamp='0.237'/>
</task>
Running with -XX:+UnlockDiagnosticVMOptions -XX:+LogCompilation -Xbatch shows only head and tail of <task> in hotspot log file (see attached):
<task compile_id='1' method='mathtest test (DI)D' bytes='26' count='2' backedge_count='5000' iicount='2' blocking='1' stamp='0.232'>
<task_done success='1' nmsize='824' count='2' backedge_count='5000' inlined_bytes='5' stamp='0.237'/>
</task>
- relates to
-
JDK-8150247 CompilerControl: LogCompilation testing
-
- Resolved
-
-
JDK-8137167 JEP165: Compiler Control: Implementation task
-
- Resolved
-