8145345: LogCompilation output is empty after JEP165: Compiler Control

Fix default init and compilecommand update

Reviewed-by: kvn